--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.7.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "emoji-picker-react": "^4.12.0",
     "leaflet": "^1.9.4",
